# sigutils

./: .clang-format  .gitmodules  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  makedeb.sh  meson.build  meson_options.txt  sigutils.pc.in
.github/: dependabot.yml  labeler.yml
.github/actions/package/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  cmake.yml  codeql.yml  doc.yml
cmake/: sigutilsConfig.cmake.in
cmake/modules/: FindCoverxygen.cmake  GitVersionDetect.cmake  PcFileGenerator.cmake  RelativeFileMacro.cmake
doc/: API.md  BUILDING.md  Building.md  CMakeLists.txt  Index.md  meson.build  sigutils.doxygen.in
sigutils/: Makefile  Makefile.am  agc.c  agc.h  block.c  block.h  clock.c  clock.h  codec.c  codec.h  coef.c  coef.h  compat.h  decider.h  defs.h  detect.c  detect.h  encoder.c  encoder.h  equalizer.c  equalizer.h  iir.c  iir.h  lfsr.c  lfsr.h  lib.c  log.c  log.h  matfile.c  matfile.h  modem.c  modem.h  ncqo.c  ncqo.h  pll.c  pll.h  property.c  property.h  sampling.h  sigutils.h  (+13 more)
sigutils/blocks/: agc.c  clock.c  filt.c  pll.c  siggen.c  tuner.c  wavfile.c
sigutils/codecs/: diff.c
sigutils/encoders/: diff.c
sigutils/modems/: qpsk.c
sigutils/specific/: apt.c  apt.h
sigutils/win32/: time.h
src/: CMakeLists.txt  Makefile.am  config.h  main.c  makedeb.sh  meson.build  radio.c  sigutils.h  test.c  test.h
src/include/sigutils/: block.h  clock.h  coef.h  dc_corrector.h  decider.h  defs.h  detect.h  equalizer.h  iir.h  lfsr.h  log.h  matfile.h  ncqo.h  pll.h  property.h  sampling.h  sigutils.h  softtune.h  specttuner.h  taps.h  tvproc.h  types.h  version.h
src/include/sigutils/util/: compat-fcntl.h  compat-mman.h  compat-netdb.h  compat-poll.h  compat-pwd.h  compat-stat.h  compat-statvfs.h  compat-stdlib.h  compat-termios.h  compat-time.h  compat-unistd.h  util.h  win32-in.h  win32-mman.h  win32-netdb.h  win32-poll.h  win32-pwd.h  win32-socket.h  win32-stat.h  win32-statvfs.h  win32-stdlib.h  win32-termios.h  win32-time.h  win32-unistd.h
src/sigutils/: agc.c  block.c  clock.c  coef.c  dc_corrector.c  decider.h  defs.h  detect.c  equalizer.c  equalizer.h  iir.c  iir.h  lfsr.c  lfsr.h  lib.c  log.c  matfile.c  ncqo.c  pll.c  property.c  sigutils.h  smoothpsd.c  softtune.c  specttuner.c  specttuner.h  taps.c  tvproc.c  tvproc.h  types.h  version.c
src/sigutils/specific/: apt.c
src/tests/: agc.c  block.c  clock.c  codec.c  costas.c  detect.c  encoder.c  filt.c  mat.c  ncqo.c  pll.c  specttuner.c  test_list.h  test_param.h
src/util/: compat-in.h  compat-inet.h  compat-select.h  compat-socket.h  util.c  win32-fcntl.c  win32-fcntl.h  win32-inet.h  win32-mman.c  win32-poll.c  win32-poll.h  win32-pwd.c  win32-statvfs.c  win32-stdlib.c  win32-termios.c  win32-time.c  win32-unistd.c
tests/: CMakeLists.txt  catch.hpp  meson.build  test_ncqo.cpp
tests/cmake_tests/: CMakeLists.txt  test.c
testutil/: Makefile.am  common.c  matlab.c  poolhelper.c  sigbufpool.c  test.h  wav.c
util/: compat-fcntl.h  compat-in.h  compat-inet.h  compat-mman.h  compat-netdb.h  compat-poll.h  compat-pwd.h  compat-select.h  compat-socket.h  compat-stat.h  compat-statvfs.h  compat-stdlib.h  compat-termios.h  compat-time.h  compat-unistd.h  compat-windows.h  util.c  util.h  win32-fcntl.c  win32-fcntl.h  win32-in.h  win32-inet.h  win32-mman.c  win32-mman.h  win32-netdb.h  win32-poll.c  win32-poll.h  win32-pwd.c  win32-pwd.h  win32-socket.h  win32-stat.h  win32-statvfs.c  win32-statvfs.h  win32-stdlib.c  win32-stdlib.h  win32-termios.c  win32-termios.h  win32-time.c  win32-time.h  win32-unistd.c  (+1 more)
